# ros_quadruped

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/lcc/: main
devel/lib/pkgconfig/: a1_description.pc  aliengoZ1_description.pc  aliengo_description.pc  b1_description.pc  b2_description.pc  b2w_description.pc  go1_description.pc  go2_description.pc  h1_description.pc  hexapod_description2.pc  laikago_description.pc  lcc.pc  quadruped.pc  sixlegdog.pc  unitree_controller.pc  unitree_gazebo.pc  unitree_guide.pc  unitree_legged_control.pc  unitree_legged_msgs.pc  unitree_legged_real.pc  unitree_legged_sdk.pc  unitree_motor_ctrl.pc  unitree_move_base.pc  z1_description.pc
src/lcc/: CMakeLists.txt  package.xml
src/lcc/include/FSM/: FSM.h  FSMState.h  State_A1MPC.h  State_BalanceTest.h  State_FixedStand.h  State_FreeStand.h  State_MPC.h  State_Passive.h  State_PosReflex.h  State_Position.h  State_QP.h  State_StepTest.h  State_SwingTest.h  State_Trotting.h  State_VMC.h  State_move_base.h
src/lcc/include/Gait/: FeetEndCal.h  GaitGenerator.h  GaitGenerator_P.h  SupportFeetEndP.h  SupportTrajectory.h  WaveGenerator.h  cpg_scheduler.h
src/lcc/include/common/: enumClass.h  hexpodRobot.h  mathTools.h  mathTypes.h  unitreeLeg.h  unitreeRobot.h
src/lcc/include/control/: BalanceCtrl.h  ContactEst.h  ControlFrame.h  ConvexMpc.h  CtrlComponents.h  Estimator.h  TerrianEsti.h  robot_lift_dowm_relex.h
src/lcc/include/interface/: CmdPanel.h  GazeboSim.h  IOInterface.h  IOROS.h  IOROS_lcc.h  KeyBoard.h
src/lcc/include/message/: LowlevelCmd.h  LowlevelState.h  unitree_joystick.h
src/lcc/src/: main.cpp
src/lcc/src/FSM/: FSM.cpp  FSMState.cpp  State_A1MPC2.cpp  State_BalanceTest.cpp  State_FixedStand.cpp  State_FreeStand.cpp  State_MPC.cpp  State_Passive.cpp  State_PosReflex.cpp  State_Position.cpp  State_QP.cpp  State_StepTest.cpp  State_SwingTest.cpp  State_Trotting.cpp  State_VMC.cpp  State_move_base.cpp
src/lcc/src/Gait/: FeetEndCal.cpp  GaitGenerator.cpp  GaitGenerator_P.cpp  SupportFeetEndP.cpp  SupportTrajectory.cpp  WaveGenerator.cpp  cpg_scheduler.cpp
src/lcc/src/common/: hexpodRobot.cpp  unitreeLeg.cpp  unitreeRobot.cpp
src/lcc/src/control/: BalanceCtrl.cpp  ContactEst.cpp  ConvexMpc.cpp  Estimator.cpp  OsqpMpcTest.cpp  TerrianEsti.cpp  robot_lift_dowm_relex.cpp
src/lcc/src/interface/: GazeboSim.cpp  IOROS.cpp  KeyBoard.cpp
src/quadruped/: CMakeLists.txt
src/sixlegdog/: CMakeLists.txt  package.xml
(+151 files in other folders)
